<resources>
    <string name="app_name">Earth Movers</string>
    <string name="home">Home</string>
    <string name="post_jobs">Post Jobs</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="earth_nmovers">EARTH\nMOVERS</string>
    <string name="get_your_dump_clean_in_a_click">Get your dump clean in a click</string>
    <string name="intro_text_two">Get connected with qualified personnel</string>
    <string name="intro_text_three">Earn xtra on earth movers with your dumptruck</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="back_arrow_button">back arrow button</string>
    <string name="login_to_your_account">login to your account</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log in</string>
    <string name="create_your_account">Create your account</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet;</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">already have an account;</string>
    <string name="enter_job_details">Enter Job Details</string>
    <string name="upload_image">Upload Image</string>
    <string name="site_location">Site location</string>
    <string name="phone">Contact Phone No</string>
    <string name="post">Post</string>
    <string name="view_project">View Details</string>
    <string name="recently_posted">Recently Posted project</string>
    <string name="check_profile">Check Profile</string>
    <string name="accept">Accept</string>
    <string name="project_details">Project Details</string>
    <string name="check_map">Check Live Maps</string>
    <string name="earn_xtra">Earn XTRA \nas a Dump truck Driver \non Earth Movers</string>
    <string name="get_dump_trashed">Get your dump trash \nand bins clean at a \nclick on Earth Movers</string>
    <string name="view_profile">View profile</string>
    <string name="job_details">Job Details</string>
    <string name="image">Image</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="switch_mode">Switch to contractor mode</string>
    <string name="accepted_offer"><b color="#000000">0</b> \n<b color="#3BAE39">Accepted offers</b></string>
    <string name="vendor_or_company">Vendor/Company details</string>
    <string name="describe_your_self">Description</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_truck_plate_number">Enter Truck Plate Number</string>
    <string name="submit">Submit</string>
    <string name="no_post_yet">No post yet.</string>
    <string name="selected_image_preview">Selected Image Preview</string>
    <string name="desc">Description</string>
    <string name="truck_num">Truck Plate Number</string>
    <string name="truck_image">Truck Image</string>
    <string name="send">Send</string>
    <string name="enter_new_password">Enter New password</string>
    <string name="confirm_new_password">Confirm New password</string>
    <string name="password_reset">Password Reset</string>
    <string name="reset">Reset</string>
    <string name="live_map">Live Map</string>
    <string name="distance">Distance</string>
</resources>